[Java] Add exports for Unsafe on later JVMs.